# pam-weblogin

./: .editorconfig  .gitignore  .gitmodules  Dockerfile  Makefile  Makefile.in  README.md  aclocal.m4  codecov.yml  config.c  config.h  configure.ac  curl.c  curl.h  http.c  http.h  json.c  pam-weblogin.conf  pam-weblogin.conf.sample  pam-weblogin.spec  pam-websso.conf  pam_curl.c  pam_curl.h  pam_websso.c  pam_websso.syms.in  utils.c  utils.h  websso_daemon.py  work.sh
.github/workflows/: build.yml  codeql-analysis.yml  flawfinder.yml  issues.yml
doc/: create_RPM.md  pam-weblogin.plantuml  protocol.md  weblogin-api.yml  websso-api.yml
docker/: .env  Dockerfile  Dockerfile.centos  Dockerfile.ubuntu  README.md  docker-compose.yml
docker-sandbox/: Dockerfile.almalinux  Dockerfile.centos  Dockerfile.ubuntu  README.md  docker-compose.yml  setup-pam-sshd.sh
docker-ssh-demo/: .env.sample  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  requirements.txt  sync.py
server/: .gitignore  README.md  requirements.txt  weblogin_daemon.py  weblogin_daemon.yml.example  weblogin_daemon.yml.sample  websso_daemon.py
server/templates/: login.j2
shell/: .gitignore  README.md  authorized_keys.py  smart_shell.plantuml  weblogin.py
src/: Makefile  Makefile.am  autogen.sh  config.c  config.h  configure.ac  defs.h  http.c  http.h  install-sh  json.c  json.h  pam.c  pam.h  pam_test.c  pam_weblogin.c  pam_weblogin.h  pam_websso.c  pam_websso.h  tty.c  tty.h  user_map.c  user_map.h  utils.c  utils.h
tests/: Makefile  main.c  pam-weblogin.conf  pam-weblogin.conf_1  pam-weblogin.conf_2  test.h  test_config.c  test_pam_weblogin.c  test_utils.c
